--- a/gui/api/com/untangle/gui/login/InitialSetupRoutingJPanel.form
+++ b/gui/api/com/untangle/gui/login/InitialSetupRoutingJPanel.form
@@ -153,7 +153,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Transparent Bridge&lt;/b&gt;&lt;br&gt;This is recommended if the external port is connected to a firewall or router. (This disables NAT and DHCP)&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Transparent Bridge&lt;/b&gt;&lt;br&gt;This is recommended if the external port is connected to some other firewall or router. (This disables NAT and DHCP)&lt;/html&gt;"/>
             <Property name="opaque" type="boolean" value="false"/>
           </Properties>
           <Events>
