replaced text field with password field
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@9327 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/tran/openvpn/gui/com/untangle/tran/openvpn/gui/ClientWizardServerJPanel.form
+++ b/tran/openvpn/gui/com/untangle/tran/openvpn/gui/ClientWizardServerJPanel.form
@@ -53,10 +53,16 @@
     <Component class="javax.swing.JTextField" name="serverJTextField">
       <Properties>
         <Property name="columns" type="int" value="19"/>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[213, 19]"/>
+        </Property>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[213, 19]"/>
+        </Property>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="220" y="120" width="-1" height="-1"/>
+          <AbsoluteConstraints x="220" y="120" width="213" height="19"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -70,17 +76,25 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="110" y="120" width="-1" height="-1"/>
+          <AbsoluteConstraints x="110" y="122" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JTextField" name="passwordJTextField">
+    <Component class="javax.swing.JPasswordField" name="passwordJPasswordField">
       <Properties>
-        <Property name="columns" type="int" value="19"/>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[213, 19]"/>
+        </Property>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[213, 19]"/>
+        </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[213, 19]"/>
+        </Property>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="220" y="140" width="-1" height="-1"/>
+          <AbsoluteConstraints x="220" y="140" width="213" height="19"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -94,7 +108,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="160" y="140" width="-1" height="-1"/>
+          <AbsoluteConstraints x="157" y="142" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
