--- a/gui/api/com/untangle/gui/configuration/BackupJDialog.form
+++ b/gui/api/com/untangle/gui/configuration/BackupJDialog.form
@@ -32,7 +32,6 @@
           <Image iconType="3" name="/com/untangle/gui/images/IconClose_16x16.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Close"/>
-        <Property name="doubleBuffered" type="boolean" value="true"/>
         <Property name="iconTextGap" type="int" value="6"/>
         <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
           <Insets value="[2, 6, 2, 6]"/>
@@ -83,7 +82,6 @@
     </Component>
     <Container class="javax.swing.JTabbedPane" name="jTabbedPane">
       <Properties>
-        <Property name="doubleBuffered" type="boolean" value="true"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Default" size="12" style="0"/>
         </Property>
@@ -194,7 +192,6 @@
                               <Font name="Dialog" size="12" style="0"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Backup&lt;/b&gt; to File&lt;/html&gt;"/>
-                            <Property name="doubleBuffered" type="boolean" value="true"/>
                             <Property name="horizontalTextPosition" type="int" value="0"/>
                             <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
                               <Insets value="[0, 0, 0, 0]"/>
@@ -277,7 +274,6 @@
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                               <Connection code="Util.getButtonBackupToUsbKey()" type="code"/>
                             </Property>
-                            <Property name="doubleBuffered" type="boolean" value="true"/>
                             <Property name="horizontalTextPosition" type="int" value="0"/>
                             <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
                               <Insets value="[0, 0, 0, 0]"/>
@@ -360,7 +356,6 @@
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                               <Connection code="Util.getButtonBackupToHardDisk()" type="code"/>
                             </Property>
-                            <Property name="doubleBuffered" type="boolean" value="true"/>
                             <Property name="horizontalTextPosition" type="int" value="0"/>
                             <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
                               <Insets value="[0, 0, 0, 0]"/>
@@ -575,7 +570,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/com/untangle/gui/images/DarkGreyBackground1600x100.png"/>
         </Property>
-        <Property name="doubleBuffered" type="boolean" value="true"/>
+        <Property name="opaque" type="boolean" value="true"/>
       </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new com.untangle.gui.widgets.MTiledIconLabel();"/>
