--- a/gui/api/com/untangle/gui/configuration/DirectoryADConnectivityTestJDialog.form
+++ b/gui/api/com/untangle/gui/configuration/DirectoryADConnectivityTestJDialog.form
@@ -110,20 +110,22 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Default" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Close&lt;/b&gt;&lt;/html&gt;"/>
-            <Property name="horizontalTextPosition" type="int" value="0"/>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/com/untangle/gui/images/IconSave_23x16.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Close"/>
             <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
-              <Insets value="[0, 0, 0, 0]"/>
+              <Insets value="[4, 8, 4, 8]"/>
             </Property>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[125, 25]"/>
+              <Dimension value="null"/>
             </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[125, 25]"/>
+              <Dimension value="null"/>
             </Property>
             <Property name="opaque" type="boolean" value="false"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[125, 25]"/>
+              <Dimension value="null"/>
             </Property>
           </Properties>
           <Events>
