--- a/gui/api/com/untangle/gui/widgets/dialogs/MOneButtonProgressJDialog.form
+++ b/gui/api/com/untangle/gui/widgets/dialogs/MOneButtonProgressJDialog.form
@@ -150,20 +150,11 @@
               <Font name="Default" size="12" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/com/untangle/gui/images/Button_Close_Dialog_106x17.png"/>
+              <Image iconType="3" name="/com/untangle/gui/images/IconSave_23x16.png"/>
             </Property>
-            <Property name="horizontalTextPosition" type="int" value="0"/>
+            <Property name="text" type="java.lang.String" value="Close"/>
             <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
-              <Insets value="[0, 0, 0, 0]"/>
-            </Property>
-            <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[125, 25]"/>
-            </Property>
-            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[125, 25]"/>
-            </Property>
-            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[125, 25]"/>
+              <Insets value="[4, 8, 4, 8]"/>
             </Property>
           </Properties>
           <Events>
