--- a/gui/api/com/untangle/gui/widgets/editTable/MLogTableJPanel.form
+++ b/gui/api/com/untangle/gui/widgets/editTable/MLogTableJPanel.form
@@ -56,21 +56,21 @@
                   <Font name="Dialog" size="12" style="0"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/com/untangle/gui/images/Button_Refresh_Log_106x17.png"/>
+                  <Image iconType="3" name="/com/untangle/gui/images/IconRefresh_16x16.png"/>
                 </Property>
+                <Property name="text" type="java.lang.String" value="Refresh"/>
                 <Property name="doubleBuffered" type="boolean" value="true"/>
-                <Property name="horizontalTextPosition" type="int" value="0"/>
                 <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
-                  <Insets value="[0, 0, 0, 0]"/>
+                  <Insets value="[4, 8, 4, 8]"/>
                 </Property>
                 <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[100, 25]"/>
+                  <Dimension value="null"/>
                 </Property>
                 <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[100, 25]"/>
+                  <Dimension value="null"/>
                 </Property>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[100, 25]"/>
+                  <Dimension value="null"/>
                 </Property>
               </Properties>
               <Events>
@@ -88,20 +88,20 @@
                   <Font name="Dialog" size="12" style="0"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/com/untangle/gui/images/Button_Start_Auto_Refresh_106x17.png"/>
+                  <Image iconType="3" name="/com/untangle/gui/images/IconAuto_16x16.png"/>
                 </Property>
-                <Property name="horizontalTextPosition" type="int" value="0"/>
+                <Property name="text" type="java.lang.String" value="Auto-Refresh"/>
                 <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
-                  <Insets value="[0, 0, 0, 0]"/>
+                  <Insets value="[4, 8, 4, 8]"/>
                 </Property>
                 <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[125, 25]"/>
+                  <Dimension value="null"/>
                 </Property>
                 <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[125, 25]"/>
+                  <Dimension value="null"/>
                 </Property>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[125, 25]"/>
+                  <Dimension value="null"/>
                 </Property>
               </Properties>
               <Events>
