--- a/gui/api/com/untangle/gui/configuration/NetworkConnectivityTestJDialog.form
+++ b/gui/api/com/untangle/gui/configuration/NetworkConnectivityTestJDialog.form
@@ -128,6 +128,7 @@
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[10, 20]"/>
             </Property>
+            <Property name="opaque" type="boolean" value="false"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[148, 20]"/>
             </Property>
