--- a/gui/api/com/untangle/gui/widgets/dialogs/RestartDialog.form
+++ b/gui/api/com/untangle/gui/widgets/dialogs/RestartDialog.form
@@ -119,6 +119,7 @@
             <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
               <Insets value="[4, 8, 4, 8]"/>
             </Property>
+            <Property name="opaque" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="proceedJButtonActionPerformed"/>
