add final set of icons fix quarantine busted subpanels policy manager text fix
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@9884 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/gui/api/com/untangle/gui/pipeline/PolicyWizardJPanel.form
+++ b/gui/api/com/untangle/gui/pipeline/PolicyWizardJPanel.form
@@ -397,7 +397,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="User">
+            <TitledBorder title="Users">
               <Font PropertyName="font" name="Dialog" size="16" style="1"/>
             </TitledBorder>
           </Border>
@@ -416,7 +416,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="The user you would like to apply this policy to."/>
+            <Property name="text" type="java.lang.String" value="The users you would like to apply this policy to."/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
@@ -451,7 +451,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Dialog" size="12" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Change User"/>
+                <Property name="text" type="java.lang.String" value="Change Users"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="userSettingsJButtonActionPerformed"/>
