--- a/gui/api/com/untangle/gui/configuration/BackupJDialog.form
+++ b/gui/api/com/untangle/gui/configuration/BackupJDialog.form
@@ -182,19 +182,12 @@
                             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                               <Font name="Dialog" size="12" style="0"/>
                             </Property>
-                            <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Backup&lt;/b&gt; to File&lt;/html&gt;"/>
-                            <Property name="horizontalTextPosition" type="int" value="0"/>
+                            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                              <Image iconType="3" name="/com/untangle/gui/images/IconBackup_32x32.png"/>
+                            </Property>
+                            <Property name="text" type="java.lang.String" value="Backup to File"/>
                             <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
-                              <Insets value="[0, 0, 0, 0]"/>
-                            </Property>
-                            <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="[155, 25]"/>
-                            </Property>
-                            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="[155, 25]"/>
-                            </Property>
-                            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="[155, 25]"/>
+                              <Insets value="[4, 8, 4, 8]"/>
                             </Property>
                           </Properties>
                           <Events>
@@ -262,21 +255,24 @@
                       <SubComponents>
                         <Component class="javax.swing.JButton" name="backupUsbKeyJButton">
                           <Properties>
-                            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                              <Connection code="Util.getButtonBackupToUsbKey()" type="code"/>
+                            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                              <Font name="Dialog" size="12" style="0"/>
                             </Property>
-                            <Property name="horizontalTextPosition" type="int" value="0"/>
+                            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                              <Image iconType="3" name="/com/untangle/gui/images/IconBackup_32x32.png"/>
+                            </Property>
+                            <Property name="text" type="java.lang.String" value="Backup to USB Key"/>
                             <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
-                              <Insets value="[0, 0, 0, 0]"/>
+                              <Insets value="[4, 8, 4, 8]"/>
                             </Property>
                             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="[155, 25]"/>
+                              <Dimension value="null"/>
                             </Property>
                             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="[155, 25]"/>
+                              <Dimension value="null"/>
                             </Property>
                             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="[155, 25]"/>
+                              <Dimension value="null"/>
                             </Property>
                           </Properties>
                           <Events>
@@ -344,21 +340,24 @@
                       <SubComponents>
                         <Component class="javax.swing.JButton" name="backupHardDiskJButton">
                           <Properties>
-                            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                              <Connection code="Util.getButtonBackupToHardDisk()" type="code"/>
+                            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                              <Font name="Dialog" size="12" style="0"/>
                             </Property>
-                            <Property name="horizontalTextPosition" type="int" value="0"/>
+                            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                              <Image iconType="3" name="/com/untangle/gui/images/IconBackup_32x32.png"/>
+                            </Property>
+                            <Property name="text" type="java.lang.String" value="Backup to Hard Disk"/>
                             <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
-                              <Insets value="[0, 0, 0, 0]"/>
+                              <Insets value="[4, 8, 4, 8]"/>
                             </Property>
                             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="[155, 25]"/>
+                              <Dimension value="null"/>
                             </Property>
                             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="[155, 25]"/>
+                              <Dimension value="null"/>
                             </Property>
                             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="[155, 25]"/>
+                              <Dimension value="null"/>
                             </Property>
                           </Properties>
                           <Events>
@@ -478,20 +477,21 @@
                             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                               <Font name="Dialog" size="12" style="0"/>
                             </Property>
-                            <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Restore&lt;/b&gt; from File&lt;/html&gt;"/>
-                            <Property name="doubleBuffered" type="boolean" value="true"/>
-                            <Property name="horizontalTextPosition" type="int" value="0"/>
+                            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                              <Image iconType="3" name="/com/untangle/gui/images/IconRestore_32x32.png"/>
+                            </Property>
+                            <Property name="text" type="java.lang.String" value="Restore from File"/>
                             <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
-                              <Insets value="[0, 0, 0, 0]"/>
+                              <Insets value="[4, 8, 4, 8]"/>
                             </Property>
                             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="[155, 25]"/>
+                              <Dimension value="null"/>
                             </Property>
                             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="[155, 25]"/>
+                              <Dimension value="null"/>
                             </Property>
                             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="[155, 25]"/>
+                              <Dimension value="null"/>
                             </Property>
                           </Properties>
                           <Events>
