--- a/gui/api/com/untangle/gui/upgrade/UpgradeProcessJPanel.form
+++ b/gui/api/com/untangle/gui/upgrade/UpgradeProcessJPanel.form
@@ -30,20 +30,15 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="upgradeJButton">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Dialog" size="12" style="0"/>
+            </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/com/untangle/gui/main/IconConfigUpgrade36x36.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Upgrade"/>
-            <Property name="doubleBuffered" type="boolean" value="true"/>
-            <Property name="horizontalTextPosition" type="int" value="0"/>
             <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
-              <Insets value="[0, 0, 0, 0]"/>
-            </Property>
-            <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[100, 25]"/>
-            </Property>
-            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[100, 25]"/>
-            </Property>
-            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[100, 25]"/>
+              <Insets value="[4, 8, 4, 8]"/>
             </Property>
           </Properties>
           <Events>
