--- a/tran/nat/gui/com/untangle/tran/nat/gui/AdvancedJPanel.form
+++ b/tran/nat/gui/com/untangle/tran/nat/gui/AdvancedJPanel.form
@@ -97,15 +97,21 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;center&gt;Configure in&lt;br&gt;&lt;b&gt;Advanced Mode&lt;/b&gt;&lt;/center&gt;&lt;/html&gt;"/>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/com/untangle/gui/images/IconAction_32x32.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;Configure in&lt;br&gt;&lt;b&gt;Advanced Mode&lt;/b&gt;&lt;/html&gt;"/>
+            <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
+              <Insets value="[4, 8, 4, 8]"/>
+            </Property>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[175, 50]"/>
+              <Dimension value="[175, 60]"/>
             </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[175, 50]"/>
+              <Dimension value="[175, 60]"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[175, 50]"/>
+              <Dimension value="[175, 60]"/>
             </Property>
           </Properties>
           <Events>
@@ -159,15 +165,21 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;center&gt;Configure in&lt;br&gt;&lt;b&gt;Standard Mode&lt;/b&gt;&lt;/center&gt;&lt;/html&gt;"/>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/com/untangle/gui/images/IconAction_32x32.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;Configure in&lt;br&gt;&lt;b&gt;Standard Mode&lt;/b&gt;&lt;/html&gt;"/>
+            <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
+              <Insets value="[4, 8, 4, 8]"/>
+            </Property>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[175, 50]"/>
+              <Dimension value="[175, 60]"/>
             </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[175, 50]"/>
+              <Dimension value="[175, 60]"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[175, 50]"/>
+              <Dimension value="[175, 60]"/>
             </Property>
           </Properties>
           <Events>
