--- a/tran/openvpn/gui/com/untangle/tran/openvpn/gui/ServerRoutingWizardSitesJPanel.form
+++ b/tran/openvpn/gui/com/untangle/tran/openvpn/gui/ServerRoutingWizardSitesJPanel.form
@@ -17,7 +17,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="12" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Optionally add VPN Sites.&lt;/b&gt;&lt;br&gt;VPN Sites are remote networks that can access any exported hosts and networks on the VPN, and visa versa.&lt;/html&gt;"/>
+        <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Optionally add VPN Sites.&lt;/b&gt;&lt;br&gt;VPN Sites are remote networks that can access any exported hosts and networks on the VPN, and vice versa.&lt;/html&gt;"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
